syntax = "proto3";

option go_package = "/services/exchanges/pkg/grpc/proto";

package exchanges;

service ExchangesService {
    rpc ReadExchanges(ReadExchangesRequest) returns (ReadExchangesResponse) {}
}

message Exchange {
    string name = 1;
    repeated string periods = 2;
    repeated string pairs = 3;
    float fees = 4;
    string last_sync_time = 5;
}

message ReadExchangesRequest {
    repeated string names = 1;
}

message ReadExchangesResponse {
    repeated Exchange exchanges = 1;
}
